[metadata]
name = streamlit_elements
version = 0.1.0
author = okld
author_email = contact@okld.dev
description = Create beautiful applications with Streamlit Elements.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/okld/streamlit-elements
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    streamlit
    reactpy

[options.package_data]
streamlit_elements = py.typed

[options.extras_require]
dev =
    pytest
    black
    flake8

[tool:pytest]
addopts = tests

[flake8]
max-line-length = 88
extend-ignore = E203
